[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/1PanelBack.png" type="Texture" id=1]
[ext_resource path="res://scenes/PanelBack.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 1.0
height = 22.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.0

[node name="PanelBack" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 4
hframes = 9
frame = 28

[node name="MediumVersion" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 1 )

[node name="ShortVersion" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25 )
shape = SubResource( 2 )

[node name="Tallversion" type="CollisionShape2D" parent="."]
position = Vector2( 0, -33 )
shape = SubResource( 3 )

[node name="Tallversion2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -46 )
shape = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_PanelBack_area_entered"]
